--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next dev\" \"sass --watch Home.module.scss output.css\"",
-    "sass": "sass --watch Home.module.scss output.css",
+    "dev": "concurrently \"next dev\" \"sass --watch ./styles/src/main.scss ./styles/out/output.css\"",
+    "sass": "sass --watch ./styles/src/main.scss ./styles/out/output.css",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
