--- a/package.json
+++ b/package.json
@@ -1,27 +1,39 @@
 {
-  "name": "styles",
-  "version": "0.1.0",
-  "private": true,
+  "name": "sorcery-ui",
+  "version": "0.0.1",
+  "description": "Simple and reusable React component library for my side projects.",
   "scripts": {
-    "dev": "concurrently \"next dev\" \"sass --watch ./styles/src/main.scss ./styles/out/output.css\"",
-    "sass": "sass --watch ./styles/src/main.scss ./styles/out/output.css",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "clean": "shx rm -r dist",
+    "build": "tsup src/index.ts --dts && shx cp package.json README.md  dist",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
-  "dependencies": {
-    "concurrently": "^7.1.0",
-    "next": "12.1.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "sass": "^1.51.0"
-  },
+  "keywords": [
+    "react",
+    "library",
+    "components",
+    "ui"
+  ],
+  "author": "abehidek",
+  "license": "ISC",
   "devDependencies": {
-    "@types/node": "17.0.29",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.0",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
-    "typescript": "4.6.3"
-  }
+    "@babel/core": "^7.20.7",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "babel-loader": "^8.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.4",
+    "shx": "^0.3.4"
+  },
+  "dependencies": {}
 }
