--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sorcery-ui",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Simple and reusable React component library for my side projects.",
   "scripts": {
     "clean": "shx rm -r dist",
@@ -22,18 +22,24 @@
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack5": "^6.5.15",
     "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
+    "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "shx": "^0.3.4",
+    "tailwindcss": "^3.2.4",
     "tsup": "^6.5.0",
-    "typescript": "^4.9.4",
-    "shx": "^0.3.4"
+    "typescript": "^4.9.4"
   },
-  "dependencies": {}
+  "resolutions": {
+    "webpack": "^5"
+  }
 }
