--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sorcery-ui",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Simple and reusable React component library for my side projects.",
   "scripts": {
     "clean": "shx rm -r dist",
-    "build": "tsup src/index.ts --dts && shx cp package.json README.md  dist",
+    "build": "tsup && shx cp package.json README.md  dist",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -41,7 +41,18 @@
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
   },
+  "peerDependencies": {
+    "react": ">=17",
+    "react-dom": ">=17"
+  },
   "resolutions": {
     "webpack": "^5"
+  },
+  "sideEffects": [
+    "dist/*",
+    "*.css"
+  ],
+  "dependencies": {
+    "class-variance-authority": "^0.4.0"
   }
 }
